# litholog

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLI_UX_SPEC.md  FEATURE_SUMMARY.md  README.md  SPEC.md  WEB_UI_FEATURES.md  WEB_UI_GUIDE.md  build.zig  build.zig.zon  comprehensive_validation_test.txt  demo_spelling.sh  enhanced_test_descriptions.txt  sync_versions.sh  test_boreholes.csv  test_descriptions.txt  test_excel_input.xlsx  test_input.csv  test_web_upload.csv  validation_test_descriptions.txt
.github/workflows/: ci.yml  go-release.yml  pages.yml  python-release.yml  release.yml
bindings/: README.md
bindings/go/: README.md  USAGE.md  build.sh  go.mod  litholog.go  litholog_benchmark_test.go  litholog_test.go  sync_version.sh  version.go
bindings/go/examples/basic/: main.go
bindings/go/examples/batch/: main.go
bindings/go/examples/builder/: main.go
bindings/go/examples/streaming/: main.go
bindings/go/examples/validation/: main.go
bindings/python/: MANIFEST.in  README.md  litholog.py  pyproject.toml  setup.py  sync_version.py
docs/: VERSION_MANAGEMENT.md  index.html  wasm.js
example-app/: README.md  go.mod  main.go
include/: litholog.h
src/: ags_cli.zig  ags_reader.zig  ags_validator.zig  ags_writer.zig  cli.zig  csv_processor.zig  demo_clustering_metrics.zig  demo_spatial.zig  demo_uncertainty.zig  excel_reader.zig  excel_writer.zig  lib.zig  main.zig  svg_patterns.zig  svg_renderer.zig  tui.zig  version.zig  wasm.zig  web.zig  web_ui.html
src/parser/: anomaly.zig  bs5930.zig  clustering.zig  compliance.zig  config.zig  constituent_db.zig  fuzzy.zig  generator.zig  lexer.zig  spatial.zig  strength_db.zig  terminology.zig  types.zig  typos.zig  uncertainty.zig  unit_identifier.zig  validation.zig
test_data/: anomalies.txt  edge_cases.txt  invalid_descriptions.txt  valid_descriptions.txt
tests/: ags_reader_test.zig  ags_validator_test.zig  ags_writer_test.zig  anomaly_test.zig  constituent_db_test.zig  fuzzy_test.zig  generator_test.zig  integration_test.zig  json_roundtrip_test.zig  lexer_test.zig  parser_test.zig  spatial_test.zig  spelling_correction_test.zig  strength_db_test.zig  uncertainty_test.zig  validation_test.zig  wasm_smoke.mjs
