[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litholog"
dynamic = ["version"]
description = "Python bindings for litholog geological description parser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Litholog Project", email = "contact@example.com"}
]
maintainers = [
    {name = "Litholog Project", email = "contact@example.com"}
]
keywords = ["geology", "geological", "description", "parser", "BS5930", "soil", "rock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "twine",
    "wheel",
    "build",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/samotron/litholog"
Documentation = "https://github.com/samotron/litholog/tree/main/bindings/python"
Repository = "https://github.com/samotron/litholog.git"
"Bug Tracker" = "https://github.com/samotron/litholog/issues"

[tool.setuptools]
packages = ["litholog"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "litholog.__version__"}

[tool.setuptools.package-data]
litholog = ["lib/*", "*.h", "*.so", "*.dll", "*.dylib"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true